# excel-live-mac

./: .gitignore  LICENSE  POWER.md  README.md  mcp.json  pyproject.toml
kiro_power/: POWER.md  mcp.json
src/excel_live_mac/: __init__.py  server.py
steering/: excel-workflows.md
