[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "excel-live-mac"
version = "0.1.0"
description = "Live Excel MCP server for macOS — interact with running Excel instances in real time via xlwings"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dillon Cole" },
]
keywords = ["mcp", "excel", "xlwings", "macos", "kiro", "spreadsheet", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "mcp>=1.0.0",
    "xlwings>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/dcol3/excel-live-mac"
Repository = "https://github.com/dcol3/excel-live-mac"
Issues = "https://github.com/dcol3/excel-live-mac/issues"

[project.scripts]
excel-live-mac = "excel_live_mac:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["src/excel_live_mac"]
